--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 bible.api.key= 54a74d2eedmsh24d5622d27ae1a1p16873ajsn53aebe5d1ebe
+server.port= 3000
+spring.redis.host= localhost
+spring.redis.port= 6379
+spring.redis.username=
+spring.redis.password=
+spring.redis.database= 1
